--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,17 +1,22 @@
 [program:postgres]
 command=/usr/lib/postgresql/15/bin/postgres -D /var/lib/postgresql/data
 user=postgres
+autorestart=true
 
 [program:redis]
 command=redis-server
+autorestart=true
 
 [program:nginx]
 command=nginx -g "daemon off;"
+autorestart=true
 
 [program:express]
 command=npm start
 directory=/app/express
+autorestart=true
 
 [program:fastapi]
 command=uvicorn main:app --host 0.0.0.0 --port 8000
 directory=/app/fastapi
+autorestart=true
