--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,22 +1,12 @@
+[program:init_db]
+command=/bin/bash /app/init-db.sh
+autorestart=false
+startsecs=0
+exitcodes=0  # 無論腳本是否成功都繼續
+
 [program:postgres]
 command=/usr/lib/postgresql/15/bin/postgres -D /var/lib/postgresql/data
 user=postgres
 autorestart=true
-
-[program:redis]
-command=redis-server
-autorestart=true
-
-[program:nginx]
-command=nginx -g "daemon off;"
-autorestart=true
-
-[program:express]
-command=npm start
-directory=/app/express
-autorestart=true
-
-[program:fastapi]
-command=uvicorn main:app --host 0.0.0.0 --port 8000
-directory=/app/fastapi
-autorestart=true
+startretries=3
+depends_on=init_db  # 依賴初始化腳本
