--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,15 @@
 server {
     listen 80;
-    server_name localhost;
 
-    # Express 反向代理 (3000)
+    # Express
     location /express/ {
-        proxy_pass http://127.0.0.1:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        rewrite ^/express/(.*) /$1 break;
+        proxy_pass http://express_app:3000;
     }
 
-    # FastAPI 反向代理 (8000)
+    # FastAPI
     location /fastapi/ {
-        proxy_pass http://127.0.0.1:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # 健康檢查端點
-    location = /express/healthz {
-        proxy_pass http://127.0.0.1:3000/healthz;
-    }
-
-    location = /fastapi/healthz {
-        proxy_pass http://127.0.0.1:8000/healthz;
+        rewrite ^/fastapi/(.*) /$1 break;
+        proxy_pass http://fastapi_app:8000;
     }
 }
