--- a/express/package.json
+++ b/express/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "soozookaizokuhunter-express",
-  "version": "1.0.0",
-  "description": "Express server for soozookaizokuhunter.com",
+  "name": "kaikai-express",
+  "version": "3.0.0",
+  "description": "KaiKaiShield Express server - V3 with security fixes, DMCA, Cloudinary, Postgres, JWT, etc.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cloudinary": "^1.33.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "pg": "^8.10.0",
-    "redis": "^4.6.7",
-    "axios": "^1.3.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "crypto": "1.0.1"
   }
 }
