--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,6 @@
-FROM nginx:stable
+FROM nginx:alpine
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY default.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
