--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,51 +1,53 @@
-# =========================
-# 1) 定義 FastAPI Upstream
-# =========================
-# 在 Docker Compose 裡，若 fastapi 服務名是 fastapi_app，可直接這樣寫；
-# 若您要 --scale fastapi=3，可列多個 server。
-upstream fastapi_upstream {
-    server fastapi_app:8000;
+worker_processes auto;
+events {
+    worker_connections 1024;
 }
 
-# =========================
-# 2) HTTP (80) server block
-# =========================
-server {
-    # 僅開 80，不啟用 443 SSL
-    listen 80;
-    server_name suzookaizokuhunter; 
-    # 如無特定網域，可用 server_name _;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # =========================
-    # Express 代理：/express/ → express_app:3000
-    # =========================
-    location /express/ {
-        # 移除 /express/ 路徑前綴
-        rewrite ^/express/(.*) /$1 break;
-        proxy_pass http://express_app:3000;
+    sendfile on;
+    keepalive_timeout 65;
 
-        # (可加額外 proxy_* 設定, 例如超時)
-        # proxy_read_timeout 300;
-        # proxy_send_timeout 300;
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    server {
+        listen 80;
+        server_name _;
+
+        location / {
+            proxy_pass http://frontend:3001;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            try_files $uri $uri/ /index.html;
+            proxy_intercept_errors on;
+        }
+
+        location /express {
+            rewrite ^/express(/.*)$ $1 break;
+            proxy_pass http://express:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /fastapi {
+            rewrite ^/fastapi(/.*)$ $1 break;
+            proxy_pass http://fastapi:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /crawler {
+            rewrite ^/crawler(/.*)$ $1 break;
+            proxy_pass http://crawler:8081;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
-
-    # =========================
-    # FastAPI 代理：/fastapi/ → fastapi_upstream
-    # =========================
-    location /fastapi/ {
-        rewrite ^/fastapi/(.*) /$1 break;
-        proxy_pass http://fastapi_upstream;
-
-        # 同理可加超時: 
-        # proxy_read_timeout 300;
-        # proxy_send_timeout 300;
-    }
-
-    # =========================
-    # 可加其他靜態檔設定
-    # =========================
-    # location / {
-    #     root /usr/share/nginx/html;
-    #     index index.html index.htm;
-    # }
 }
