--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,11 +1,15 @@
-FROM python:3.9
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py blockchain.py crawler.py analytics.py dmca.py ./
+COPY . /app
 
 EXPOSE 8000
+
+HEALTHCHECK --interval=30s --timeout=10s \
+  CMD curl -f http://localhost:8000/health || exit 1
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
