--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:alpine
 
-COPY default.conf /etc/nginx/nginx.conf
+# 將 default.conf 複製到容器 /etc/nginx/conf.d/default.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
