--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,8 @@
+# 將此檔案命名為 default.conf
+# docker build 時會 COPY 到 /etc/nginx/conf.d/default.conf
+
 worker_processes auto;
+
 events {
     worker_connections 1024;
 }
@@ -10,41 +14,44 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    # gzip 可選
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
-        server_name _;
 
+        # 您的網域 & IP
+        server_name suzookaizokuhunter.com 143.244.146.105;
+
+        # =========== 1) 根路徑 '/' → 前端 React (port:3001) =========
         location / {
             proxy_pass http://frontend:3001;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # React SPA 常見做法: 遇不到檔案就回 index.html
             try_files $uri $uri/ /index.html;
-            proxy_intercept_errors on;
+
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /express {
-            rewrite ^/express(/.*)$ $1 break;
+        # =========== 2) /express/ → Express (port:3000) =============
+        location /express/ {
+            # rewrite 移除 /express/ 前綴
+            rewrite ^/express/(.*)$ /$1 break;
             proxy_pass http://express:3000;
+
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /fastapi {
-            rewrite ^/fastapi(/.*)$ $1 break;
+        # =========== 3) /fastapi/ → FastAPI (port:8000) =============
+        location /fastapi/ {
+            rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
 
-        location /crawler {
-            rewrite ^/crawler(/.*)$ $1 break;
-            proxy_pass http://crawler:8081;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
