--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx:alpine
 
-# 將 default.conf 複製到容器 /etc/nginx/conf.d/default.conf
-COPY default.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
