--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,19 @@
   "name": "kaikai-frontend",
   "version": "1.0.0",
   "private": true,
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
-  }
+  },
+
+  // [修改處] homepage: "http://suzookaizoku.com" 或 "https://suzookaizoku.com"
+  // 若您之後有 SSL，請改成 https://
+  "homepage": "http://suzookaizoku.com"
 }
