--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,24 +10,29 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    # 開啟 Gzip (可選)
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
 
-        # [修改處] 讓nginx針對 suzookaizoku.com / www.suzookaizoku.com 回應
-        server_name suzookaizoku.com www.suzookaizoku.com;
+        # 若你的正式網域是 suzookaizokuhunter.com，建議這樣：
+        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+        # location / -> 代理到 React 前端
         location / {
             proxy_pass http://frontend:3001;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # SPA 模式下，若路徑找不到對應檔案，就走 /index.html
             try_files $uri $uri/ /index.html;
-            proxy_intercept_errors on;
+            # 如無特別需求，可不用 proxy_intercept_errors on;
+            # 否則可能干擾自訂錯誤頁面
         }
 
+        # Express (Node.js) 後端
         location /express {
             rewrite ^/express(/.*)$ $1 break;
             proxy_pass http://express:3000;
@@ -36,6 +41,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # FastAPI (Python) 後端
         location /fastapi {
             rewrite ^/fastapi(/.*)$ $1 break;
             proxy_pass http://fastapi:8000;
@@ -44,6 +50,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Crawler (Node.js) 後端
         location /crawler {
             rewrite ^/crawler(/.*)$ $1 break;
             proxy_pass http://crawler:8081;
