--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             # SPA 模式下，若路徑找不到對應檔案，就走 /index.html
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
             # 如無特別需求，可不用 proxy_intercept_errors on;
             # 否則可能干擾自訂錯誤頁面
         }
