--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,19 +17,20 @@ http {
     server {
         listen 80;
 
-        # 若你的正式網域是 suzookaizokuhunter.com，建議這樣：
+        # 若你的正式網域是 suzookaizokuhunter.com，建議這樣
+        # 若同時要支援 www. 子網域，也可加 www.suzookaizokuhunter.com
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # location / -> 代理到 React 前端
+        # location / -> 代理到 React 前端 (port 3001)
         location / {
             proxy_pass http://frontend:3001;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # SPA 模式下，若路徑找不到對應檔案，就走 /index.html
-            try_files $uri $uri/ /index.html =404;
-            # 如無特別需求，可不用 proxy_intercept_errors on;
-            # 否則可能干擾自訂錯誤頁面
+
+            # SPA 模式下, 若檔案不存在, fallback 到 /index.html
+            # (移除 =404，可避免找不到檔案時立刻拋 404, 而改用 index.html)
+            try_files $uri $uri/ /index.html;
         }
 
         # Express (Node.js) 後端
