--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,34 +6,26 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-
     sendfile on;
     keepalive_timeout 65;
 
-    # 開啟 Gzip (可選)
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
-
-        # 若你的正式網域是 suzookaizokuhunter.com，建議這樣
-        # 若同時要支援 www. 子網域，也可加 www.suzookaizokuhunter.com
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # location / -> 代理到 React 前端 (port 3001)
         location / {
             proxy_pass http://frontend:3001;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-            # SPA 模式下, 若檔案不存在, fallback 到 /index.html
-            # (移除 =404，可避免找不到檔案時立刻拋 404, 而改用 index.html)
+            # SPA fallback: 若檔案不存在，就讀 /index.html
             try_files $uri $uri/ /index.html;
         }
 
-        # Express (Node.js) 後端
         location /express {
             rewrite ^/express(/.*)$ $1 break;
             proxy_pass http://express:3000;
@@ -42,7 +34,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # FastAPI (Python) 後端
         location /fastapi {
             rewrite ^/fastapi(/.*)$ $1 break;
             proxy_pass http://fastapi:8000;
@@ -51,7 +42,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Crawler (Node.js) 後端
         location /crawler {
             rewrite ^/crawler(/.*)$ $1 break;
             proxy_pass http://crawler:8081;
