--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,6 @@
 worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+
 events {
     worker_connections 1024;
 }
@@ -8,57 +10,72 @@ http {
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
+    server_tokens off;  # 隱藏 Nginx 版本號
 
+    # 日誌格式
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
+    # Gzip 壓縮
     gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # 靜態文件緩存
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # 前端靜態文件（方案 A）
+        # 前端靜態文件 (Vue/React 打包後的文件)
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
+
+            # 緩存控制 (可選)
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires 0;
         }
 
-        # Express 反向代理（假設後端需要保留前綴）
-        location /express {
-            proxy_pass http://express:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # FastAPI 反向代理（移除前綴）
+        # FastAPI 反向代理
         location /fastapi {
+            # 移除前綴 /fastapi 並轉發
             rewrite ^/fastapi(/.*)$ $1 break;
-            proxy_pass http://fastapi:8000/;
+            proxy_pass http://fastapi:8000;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket 支援 (如果有需要)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
-        # 爬蟲服務代理
-        location /crawler {
-            rewrite ^/crawler(/.*)$ $1 break;
-            proxy_pass http://crawler:8081/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # 靜態文件緩存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        # 靜態文件緩存 (JS/CSS/圖片等)
+        location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
+            root /usr/share/nginx/html;
             expires 365d;
             add_header Cache-Control "public, no-transform";
+            access_log off;
         }
 
-        # 封鎖惡意路徑
-        location ~* ^/(wp-admin|.git|.env) {
+        # 封鎖惡意掃描路徑
+        location ~* ^/(wp-admin|.git|.env|config|\.php|\.asp) {
             deny all;
             return 404;
+        }
+
+        # 錯誤頁面自定義 (可選)
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
         }
     }
 }
