--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,139 @@
-version: '3.9'
+version: '3.8'
+
 services:
   db:
-    image: postgres:13
+    image: postgres:15
     container_name: postgres_db
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  geth:
+    build: ./geth
+    container_name: geth_node
+    networks:
+      - backend
+    ports:
+      - "8545:8545"
+      - "30303:30303"
+      - "30303:30303/udp"
+    volumes:
+      - geth_data:/root/.ethereum
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:8545 || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+
+  ipfs:
+    build: ./ipfs
+    container_name: ipfs_node
+    networks:
+      - backend
+    ports:
+      - "4001:4001"
+      - "5001:5001"
+      - "8080:8080"
+    volumes:
+      - ipfs_data:/data/ipfs
 
   express:
     build: ./express
     container_name: express_app
-    ports:
-      - "3000:3000"
     depends_on:
-      - db
-    environment:
-      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - JWT_SECRET=${JWT_SECRET}
-      - EMAIL_HOST=${EMAIL_HOST}
-      - EMAIL_PORT=${EMAIL_PORT}
-      - EMAIL_USER=${EMAIL_USER}
-      - EMAIL_PASS=${EMAIL_PASS}
-      - EMAIL_FROM=${EMAIL_FROM}
-      - BLOCKCHAIN_RPC=${BLOCKCHAIN_RPC}
-      - BLOCKCHAIN_PRIVATE_KEY=${BLOCKCHAIN_PRIVATE_KEY}
-    volumes:
-      - ./express/uploads:/app/uploads
+      db:
+        condition: service_healthy
+      geth:
+        condition: service_healthy
+      ipfs:
+        condition: service_started
+    env_file:
+      - .env
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   fastapi:
     build: ./fastapi
     container_name: fastapi_app
-    ports:
-      - "8000:8000"
     depends_on:
-      - db
-    environment:
-      - BLOCKCHAIN_RPC=${BLOCKCHAIN_RPC}
-      - BLOCKCHAIN_PRIVATE_KEY=${BLOCKCHAIN_PRIVATE_KEY}
+      db:
+        condition: service_healthy
+      geth:
+        condition: service_healthy
+    env_file:
+      - .env
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  crawler:
+    build: ./crawler
+    container_name: crawler_app
+    env_file:
+      - .env
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  frontend:
+    build: ./frontend
+    container_name: frontend_app
+    depends_on:
+      - express
+      - fastapi
+    env_file:
+      - .env
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
     build: ./nginx
     container_name: nginx_proxy
-    ports:
-      - "80:80"
     depends_on:
       - express
       - fastapi
+      - frontend
+      - crawler
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - backend
 
 volumes:
   db_data:
+  geth_data:
+  ipfs_data:
+
+networks:
+  backend:
+    driver: bridge
