--- a/express/package.json
+++ b/express/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "kaikai-express",
-  "version": "3.0.0",
-  "description": "KaiKaiShield Express server - V3 with security fixes, DMCA, Cloudinary, Postgres, JWT, etc.",
+  "name": "kai-express",
+  "version": "1.0.0",
+  "description": "Suzookaizokuhunter Express backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^1.33.0",
-    "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.8",
-    "pg": "^8.7.3",
-    "sequelize": "^6.17.0",
+    "bcrypt": "^5.1.0",
+    "pg": "^8.9.0",
     "jsonwebtoken": "^8.5.1",
-    "crypto": "1.0.1"
+    "ipfs-http-client": "^59.0.0",
+    "axios": "^1.3.5"
   }
 }
