--- a/crawler/package.json
+++ b/crawler/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "puppeteer": "^19.7.5",
     "express": "^4.18.2",
-    "body-parser": "^1.20.1"
+    "body-parser": "^1.20.1",
+    "axios": "^1.3.5"
   }
 }
