--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,14 +1,11 @@
 FROM ethereum/client-go:latest
 
 WORKDIR /root
-
 COPY genesis.json /root/genesis.json
 
 RUN mkdir -p /root/.ethereum
-
-# 把 datadir 放在 init 前面
-RUN geth --datadir /root/.ethereum init /root/genesis.json
+RUN geth init /root/genesis.json --datadir /root/.ethereum
 
 EXPOSE 30303 30303/udp 8545
-
-CMD ["geth", "--datadir", "/root/.ethereum","--networkid", "12345","--http","--http.addr", "0.0.0.0","--http.port", "8545","--http.api", "personal,eth,net,web3","--allow-insecure-unlock","--dev"]
+CMD ["geth","--datadir", "/root/.ethereum","--networkid", "12345","--http","--http.addr", "0.0.0.0","--http.port", "8545","--http.api", "eth,net,web3","--allow-insecure-unlock","--dev"
+]
