--- a/express/package.json
+++ b/express/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "kai-express",
+  "name": "kai-express-v6",
   "version": "1.0.0",
-  "description": "Suzookaizokuhunter Express backend",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
-    "bcrypt": "^5.1.0",
-    "pg": "^8.9.0",
+    "crypto": "1.0.1",
+    "nodemailer": "^6.9.1",
     "jsonwebtoken": "^8.5.1",
-    "ipfs-http-client": "^59.0.0",
-    "axios": "^1.3.5"
+    "sequelize": "^6.29.3",
+    "pg": "^8.9.0",
+    "cloudinary": "^1.32.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "uuid": "^9.0.0"
   }
 }
