--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,14 @@
-FROM node:18
-
+# builder
+FROM node:18 AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-
 RUN npm run build
-RUN npm install -g serve
 
-EXPOSE 3001
-CMD ["serve", "-s", "build", "-l", "3001"]
+# production
+FROM nginx:alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
