--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "kaikai-frontend",
+  "name": "kaikai-frontend-v6",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
