--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,11 @@
 worker_processes auto;
-events {
-    worker_connections 1024;
-}
+events { worker_connections 1024; }
 
 http {
     sendfile on;
     keepalive_timeout 65;
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
 
-    # Redirect http -> https
+    # HTTP => HTTPS
     server {
         listen 80;
         server_name suzookaizoku.com www.suzookaizoku.com;
@@ -20,36 +16,31 @@ http {
         listen 443 ssl;
         server_name suzookaizoku.com www.suzookaizoku.com;
 
-        # 假設Let's Encrypt憑證路徑
         ssl_certificate /etc/letsencrypt/live/suzookaizoku.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizoku.com/privkey.pem;
 
+        # 前端
         location / {
             proxy_pass http://frontend:3001;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             try_files $uri $uri/ /index.html;
         }
 
-        location /express {
-            rewrite ^/express(/.*)$ $1 break;
+        # Express => /api/
+        location /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /fastapi {
-            rewrite ^/fastapi(/.*)$ $1 break;
+        # FastAPI => /fastapi/
+        location /fastapi/ {
+            rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /crawler {
-            rewrite ^/crawler(/.*)$ $1 break;
+        # Crawler => /crawler/
+        location /crawler/ {
+            rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
